<resources>
    <string name="app_name">TomatoTimer</string>
    <string name="smile">☺</string>
    <string name="workLabel">Work</string>
    <string name="restLabel">Rest</string>
    <string name="start_message">Starting timer</string>
    <string name="finished_timer_message">Finished</string>
    <string name="cancel">Cancel</string>
    <string name="zero">0:00</string>
    <string name="rest_mode">REST</string>
    <string name="work_mode">WORK</string>
</resources>
